<resources>
    <string name="app_name">GreenApp</string>
    <string name="server_client_id">415061378501-smookelt1i4b534h11mhif20fpctt3r2.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="disaster_title_hint">Enter a title for the disaster</string>
    <string name="disaster_title_label">TITLE</string>
    <string name="disaster_details_label">DETAILS</string>
    <string name="disaster_solved_label">Solved?</string>
    <string name="details">Details</string>
    <string name="disasters_title">Disasters</string>
    <string name="disaster_date_label">Date:</string>
    <string name="date_picker_title">Date of disaster:</string>
    <string name="new_disaster">New disaster</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see a trouble</string>
    <string name="delete_disaster">Delete</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="ShowDisasterList">ShowDisasterList</string>
</resources>
